--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,32 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.card:hover .imgBx{
+    top:-100px;
+    scale: 0.76;
+    box-shadow: 5px 5px 5px  lightblue;
+    /* box-shadow: 45px 45px 45px rgba(0,0,0,0.15); */
+}
+.imgBx img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.content{
+    position: absolute;
+    top: 252px;
+    width: 100%;
+    padding: 0 30px;
+    height: 35px;
+    overflow: hidden;
+    text-align: center;
+    transition: 0.5s;
+}
+.card:hover .content{
+    top:130px;
+    height: 250px;
+}
